# bot-tecficon

./: .env  .gitignore  pyproject.toml
bot_tecficon/: build.py  main.py
bot_tecficon/config/: __init__.py
bot_tecficon/config/constants/: environment.py
bot_tecficon/config/theme/: theme_app.py
bot_tecficon/domain/datasources/: __init__.py  eventos_datasource.py  siniestros_datasource.py  victimas_datasource.py
bot_tecficon/domain/entities/: __init__.py  evento.py  siniestro.py  victima.py
bot_tecficon/domain/errors/: __init__.py  crear_siniestro_error.py  error.py  inicio_sesion_error.py  no_hay_eventos_error.py  selenium_error.py  siniestro_error.py  siniestro_no_admite_eventos_error.py  siniestro_no_existe_error.py  siniestro_ya_existe_error.py
bot_tecficon/domain/repositories/: __init__.py  eventos_repository.py  siniestros_repository.py  victimas_repository.py
bot_tecficon/domain/use_cases/: __init__.py  actualizar_victimas.py  crear_siniestro.py  sincronizar_eventos.py
bot_tecficon/infrastructure/datasources/: __init__.py
bot_tecficon/infrastructure/mappers/: evento_mapper.py  siniestro_mapper.py
bot_tecficon/infrastructure/repositories/: __init__.py  eventos_repository_impl.py  siniestros_repository_impl.py  victimas_repositroy_impl.py
bot_tecficon/presentation/: __init__.py
bot_tecficon/presentation/helpers/: __init__.py  selenium.py  sinester_helper.py
bot_tecficon/presentation/screens/: __init__.py  home_screen.py
tests/: test_crear_siniestro.py  test_datos_siniestro.py  test_entrarafollowup.py  test_iniciarsesion.py
(+14 files in other folders)
