[tool.poetry]
name = "bot-tecficon"
version = "0.1.0"
description = ""
authors = ["Santicm23 <santicastrom@outlook.com>"]
readme = "README.md"

[tool.poetry.scripts]
app = "bot_tecficon.main:main"

[tool.poetry.dependencies]
python = "^3.12"
ttkbootstrap = "^1.10.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
